--- a/tab/NS_perf_additional_specifications.tex
+++ b/tab/NS_perf_additional_specifications.tex
@@ -1,14 +1,15 @@
 % latex table generated in R 4.0.2 by xtable 1.8-4 package
-% Sun Mar 21 03:47:50 2021
+% Sun Mar 21 20:22:59 2021
 \begin{table}[H]
 \centering
 \begin{tabular}{lrrrrrrr}
   \toprule
 Model and Specification & AUC & Accuracy & AccuracyLower & AccuracyUpper & Precision & Recall & F1 \\ 
   \midrule
-Demo. + Religion & 0.748 & 0.683 & 0.670 & 0.696 & 0.679 & 0.853 & 0.756 \\ 
-  Demo. + South & 0.704 & 0.638 & 0.625 & 0.651 & 0.701 & 0.630 & 0.664 \\ 
-  Demo. + Symbolic ideology & 0.867 & 0.795 & 0.783 & 0.806 & 0.780 & 0.896 & 0.834 \\ 
+Demo. + Religion & 0.737 & 0.670 & 0.657 & 0.683 & 0.664 & 0.841 & 0.742 \\ 
+  Demo. + South & 0.697 & 0.634 & 0.621 & 0.647 & 0.697 & 0.631 & 0.662 \\ 
+  Demo. + Symbolic ideology & 0.869 & 0.789 & 0.777 & 0.800 & 0.765 & 0.902 & 0.828 \\ 
+  Demo. + Issues & 0.942 & 0.871 & 0.862 & 0.880 & 0.877 & 0.898 & 0.887 \\ 
    \bottomrule
 \end{tabular}
 \end{table}
